# Hextant-AI

./: .gitignore  LICENSE.md  README.md  ROADMAP.md  hexy.db  pyproject.toml  pytest.ini  requirements.txt  verify_test.py
.github/workflows/: tests.yaml
app/: main.py
app/core/: config.py  database.py  deps.py  logging.py  oauth2.py  prompts.py  tokens.py
app/domains/: __init__.py
app/domains/artifacts/: models.py  service.py
app/domains/attachments/: models.py  routes.py  schemas.py  service.py
app/domains/auth/: models.py  routes.py  service.py
app/domains/conversations/: models.py  routes.py  schemas.py  service.py
app/domains/coupons/: models.py
app/domains/llm_models/: models.py  routes.py  schemas.py  service.py
app/domains/memories/: models.py
app/domains/messages/: models.py  routes.py  schemas.py  service.py  tools.py
app/domains/orders/: models.py
app/domains/quotas/: models.py
app/domains/subscriptions/: models.py  routes.py  schemas.py  service.py
app/domains/tiers/: models.py  routes.py  schemas.py  service.py
app/domains/users/: models.py  routes.py  schemas.py  security.py  service.py
app/shared/: enums.py  paystack_service.py
app/tests/unit/: test_user_routes.py  test_user_service.py
app/tests/unit/auth/: test_auth_route.py  test_auth_service.py
app/tests/unit/conversations/: test_conversation_routes.py  test_conversation_service.py
app/tests/unit/llm_models/: test_llm_model_routes.py  test_llm_model_service.py
app/tests/unit/tiers/: test_tier_routes.py  (+1 more)
app/utils/: create_admin.py  password.py
(+2 files in other folders)
