[project]
name = "hextant-ai"
version = "0.1.0"
description = "FastAPI backend for AI-powered conversation platform with LLM integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.0",
    "boto3>=1.43.2",
    "boto3-stubs>=1.43.2",
    "fastapi[all]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic-ai>=1.89.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "rich>=15.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "user-agents>=2.2.0",
    "uvicorn>=0.46.0",
]
